fix: Align unordered list a little better

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,12 @@ body {
     text-shadow: 3px 3px 5px white;
 }
 
+section#mod-list {
+  text-align: left;
+  width: fit-content;
+  display: block;
+  margin: 0 auto;
+}
 
 blink {
     animation: blinker 0.6s linear infinite;
